# mrs_uav_trackers

./: CHANGELOG.rst  CMakeLists.txt  README.md  Session.vim  csv_tracker.xml  joy_tracker.xml  landoff_tracker.xml  line_tracker.xml  linear_tracker.xml  mbzirc_trackers.xml  mpc_tracker.xml  mrs_trackers.xml  new_trackers.xml  null_tracker.xml  package.xml  plugins.xml
.catkin_tools/cache/: workspace_packages
.ci/: ci_before_install.sh  deploy_key_github.enc
cfg/: flip_tracker.cfg  mpc_tracker.cfg
config/: f550.yaml  gains_drs.cfg  simulation.yaml
config/default/: csv_tracker.yaml  flip_tracker.yaml  joy_bumper_tracker.yaml  joy_tracker.yaml  landoff_tracker.yaml  line_tracker.yaml  lite_tracker.yaml  matlab_tracker.yaml  mpc_tracker.yaml  speed_tracker.yaml  wall_tracker.yaml
config/f550/: f550.yaml  landoff_tracker.yaml  mpc_tracker.yaml
config/private/: flip_tracker.yaml  landoff_tracker.yaml  line_tracker.yaml  mpc_tracker.yaml  passthrough_tracker.yaml  speed_tracker.yaml
config/public/: joy_tracker.yaml  landoff_tracker.yaml  mpc_tracker.yaml  passthrough_tracker.yaml  speed_tracker.yaml
config/simulation/: joy_bumper_tracker.yaml  joy_tracker.yaml  landoff_tracker.yaml  line_tracker.yaml  linear_tracker.yaml  matlab_tracker.yaml  mpc_tracker.yaml  takeoff_tracker.yaml  wall_tracker.yaml
config/simulation/eaglemk2/: flip_tracker.yaml
config/simulation/f330/: flip_tracker.yaml
config/simulation/f450/: flip_tracker.yaml
config/simulation/f550/: flip_tracker.yaml
config/simulation/t650/: flip_tracker.yaml
config/simulation/x500/: flip_tracker.yaml
config/uav/: landoff_tracker.yaml  line_tracker.yaml  mpc_tracker.yaml
config/uav/eagle/: csv_tracker.yaml  landoff_tracker.yaml  mpc_tracker.yaml
config/uav/eaglemk2/: landoff_tracker.yaml
config/uav/f450/: joy_tracker.yaml  landoff_tracker.yaml  mpc_tracker.yaml
config/uav/f550/: joy_tracker.yaml  landoff_tracker.yaml  mpc_tracker.yaml
config/uav/f550_darpa/: landoff_tracker.yaml  line_tracker.yaml  mpc_tracker.yaml
config/uav/naki/: landoff_tracker.yaml
config/uav/pig/: landoff_tracker.yaml  mpc_tracker.yaml
config/uav/t650/: joy_tracker.yaml  landoff_tracker.yaml
include/: commons.h  mpc_tracker.h  mpc_tracker_solver.h
include/mrs_trackers/: cvx_wrapper.h
include/mrs_uav_trackers/: cvx_wrapper.h
include/solver/: solver.h
scripts/: get_public_params.py
src/csv_tracker/: csv_tracker.cpp
src/cvx_wrapper/: cvx_wrapper.cpp
src/cvx_wrapper/cvxgen/: csolve.c  description.cvxgen  ldl.c  make_csolve.m  solver.c  solver.h  util.c
src/flip_tracker/: flip_tracker.cpp
src/joy_bumper_tracker/: joy_bumper_tracker.cpp
src/joy_tracker/: joy_tracker.cpp
src/landoff_tracker/: landoff_tracker.cpp
src/line_tracker/: line_tracker.cpp
src/linear_tracker/: linear_tracker.cpp
src/lite_tracker/: lite_tracker.cpp
src/matlab_tracker/: matlab_tracker.cpp
src/mbzirc_trackers/: mpc_tracker.cpp
src/midair_activation_tracker/: midair_activation_tracker.cpp
src/mpc_tracker/: cvx_wrapper.cpp  cvx_wrapper.h  cvx_wrapper_xy.cpp  cvx_wrapper_xy.h  cvx_wrapper_z.cpp  mpc_tracker.cpp
src/mpc_tracker/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
src/mpc_tracker/cvxgen_xy/: csolve.c  cvxsolve.m  ldl.c  matrix_support.c  renamer1d.py  solver.c  solver.h  util.c
src/mpc_tracker/cvxgen_yaw/: csolve.c  csolve.m  ldl.c  make_csolve.m  matrix_support.c  solver.c  testsolver.c
src/mpc_tracker/cvxgen_z/: csolve.m  ldl.c  make_csolve.m  renamer1d.py
src/mrs_trackers/: csv_tracker.cpp  cvx_wrapper.cpp  cvx_wrapper.h  cvx_wrapper1d.cpp  cvx_wrapper1d.h  cvx_wrapper_xy.cpp  cvx_wrapper_xy.h  cvx_wrapper_yaw.cpp  cvx_wrapper_yaw.h  cvx_wrapper_z.h  linear_tracker.cpp  mpc_tracker.cpp  renamer.py  renamer1d.py
src/mrs_trackers/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
src/mrs_trackers/cvxgen1d/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  renamer1d.py  solver.c  solver.h  testsolver.c  util.c
src/passthrough_tracker/: passthrough_tracker.cpp
src/speed_tracker/: speed_tracker.cpp
src/wall_tracker/: wall_tracker.cpp
test/: CMakeLists.txt  all_tests.sh  compile_tests.sh  coverage.sh  single_test.sh
test/landoff_tracker/: CMakeLists.txt
test/landoff_tracker/takeoff_landing/: landoff_tracker_takeoff_landing.test  takeoff_landing.test  test.cpp
test/landoff_tracker/takeoff_landing/config/: custom_config.yaml  mrs_simulator.yaml  simulator.yaml
test/landoff_tracker/takeoff_landing/launch/: mrs_uav_system.launch
test/line_tracker/: CMakeLists.txt
test/line_tracker/basic/: line_tracker_basic.test  test.cpp
test/line_tracker/basic/config/: custom_config.yaml
test/line_tracker/basic/launch/: mrs_uav_system.launch
test/line_tracker/line_tracker_goto/: line_tracker_goto.test  test.cpp
test/line_tracker/line_tracker_goto/config/: custom_config.yaml
test/mpc_tracker/: CMakeLists.txt
test/mpc_tracker/basic/: mpc_tracker_basic.test  test.cpp
test/mpc_tracker/basic/launch/: mrs_uav_system.launch
test/mpc_tracker/mpc_avoidance_two_should_avoid/: mpc_avoidance_two_should_avoid.test  rviz1.rviz  rviz2.rviz  test.cpp
test/mpc_tracker/mpc_avoidance_two_should_avoid/config/: mrs_simulator.yaml  world_config.yaml
test/mpc_tracker/mpc_avoidance_two_should_crash/: mpc_avoidance_two_should_crash.test  test.cpp
test/mpc_tracker/mpc_avoidance_two_should_crash/config/: custom_config.yaml  mrs_simulator.yaml
test/mpc_tracker/mpc_avoidance_two_uav1_passive/: README.md  mpc_avoidance_two_uav1_passive.test
test/mpc_tracker/mpc_avoidance_two_uav2_passive/: README.md  mpc_avoidance_two_uav2_passive.test  test.cpp
test/mpc_tracker/mpc_avoidance_two_uav2_passive/config/: custom_config_uav2.yaml  network_config.yaml
test/mpc_tracker/mpc_goto/: test.cpp
test/mpc_tracker/mpc_tracker_goto/: CMakeLists.txt  test.cpp
(+34 files in other folders)
