<?xml version="1.0"?>
<package>
  <name>mrs_trackers</name>
  <version>1.0.0</version>
  <description>The mrs_trackers package</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mrs_msgs</build_depend>
  <build_depend>mav_manager</build_depend>
  <build_depend>mrs_estimation</build_depend>
  <build_depend>mrs_cvxy</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>trackers_manager</build_depend>
  <build_depend>mrs_mav_manager</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>trackers_manager</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>mrs_estimation</run_depend>
  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>mrs_mav_manager</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <mrs_mav_manager plugin="${prefix}/mpc_tracker.xml" />
    <mrs_mav_manager plugin="${prefix}/csv_tracker.xml" />
    <mrs_mav_manager plugin="${prefix}/linear_tracker.xml" />
  </export>

</package>
