<?xml version="1.0"?>
<package format="2">

  <name>mrs_trackers</name>
  <version>0.0.5</version>
  <description>The mrs_trackers package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_cvxy</depend>
  <depend>mrs_uav_manager</depend>
  <depend>mrs_controllers</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <mrs_uav_manager plugin="${prefix}/plugins.xml" />
  </export>

</package>
